# VulkanBase

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/DICOM/Herz_Weiser_Kurt/: DICOMDIR
assets/DICOM/Huefte/: 1-01.dcm  1-03.dcm  1-10.dcm  1-16.dcm  1-18.dcm  1-19.dcm  1-22.dcm  1-24.dcm  1-27.dcm  1-28.dcm  1-29.dcm  1-34.dcm  1-35.dcm  1-36.dcm  1-38.dcm  1-39.dcm  1-40.dcm  1-41.dcm  1-42.dcm  1-44.dcm  1-49.dcm  1-52.dcm  1-53.dcm  1-54.dcm  1-56.dcm  1-61.dcm  1-62.dcm  1-64.dcm  1-65.dcm  1-67.dcm  1-71.dcm  1-72.dcm  1-76.dcm  1-82.dcm  test.mlab
assets/DICOM/MRT_HWS/: Autorun.inf  DICOMDIR
assets/DICOM/Schaedel_Weiser_Kurt/: AUTORUN.INF  DICOMDIR
assets/DemoData/: Abdomen1_MRA.small.dcm  Abdomen1_MRA.small.tif  Bone.32x32x32.mnc  Carotid1_MRA.small.dcm  Carotid1_MRA.small.tif  CurveData.txt  Head3_dualecho.small.dcm  Head3_dualecho.small.lzma.9.mlimage  Head3_dwi.small.dcm  Head3_dwi.small.tif  Leg1_MRA_fl3d_US.small.dcm  Leg1_MRA_fl3d_US.small.tif  Liver1_CT_venous.small.tumorMask.dcm  Liver1_CT_venous.small.tumorMask.tif  Liver2_LiverMask.small.dcm  Liver2_LiverMask.small.tif  Liver2_MRT_venous.small.dcm  Liver2_MRT_venous.small.tif  LungNodule.dcm  LungNodule.tif  Lymphnode.dcm  Lymphnode.tif  MRI_Head.dcm  MRI_Head.tif  Shoulder_Fracture.dcm  Shoulder_Fracture_tags.dcm  Shoulder_Fracture_tags.tif  Thorax1_CT.small.dcm  Thorax1_CT.small.mllut  Thorax1_CT.small.tif  Treedata_PV.txt  Treedata_PV0000.txt  Tumor1_Head_t1.small.tif  dmribreast.contour.dcm  dmribreast.contour.tif  dmribreast.dcm  dmribreast.tif  venus.off
assets/DemoData/BrainMultiModal/: ProbandDTI.dcm  ProbandT2.tif  ProbandTOF.dcm  ProbandTOF.tif
assets/DemoData/BrainT1Dicom/: export0009.dcm  export0010.dcm  export0011.dcm
assets/DemoData/DicomRT/: CREDITS.txt  RD1.3.6.1.4.1.2452.6.3513230808.1184343614.1267402423.275659.dcm  RI1.3.6.1.4.1.2452.6.3662610796.1171752161.88552361.63290940.dcm  RP1.3.6.1.4.1.2452.6.998701572.1323706291.2356805512.4049491.dcm  RS1.3.6.1.4.1.2452.6.2951369053.1166013784.715527822.1679960.dcm  ct.mlimage
assets/DemoData/MRSpectroscopy/: Brain_Gliomatosis_CSI-TE270-raw  Brain_Gliomatosis_T2-TIRM.dcm  Brain_Gliomatosis_T2-TIRM.tif
assets/DemoData/ProbandT1Formats/: CreateProbandT1FormatFiles.mlab  (+41 more)
assets/textures/: example.pgm
build_Debug/Debug/: imgui.ini
lib/gdcm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestCustom.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  Copyright.txt  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  GDCM.sln  GDCMConfig.cmake  GDCMExports.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/: Allocator.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DICOM_Series.cpp  DICOM_Series.hpp  Device.hpp  GPU.hpp  Image.cpp  Image.hpp  Instance.hpp  SpirvHelper.cpp  SpirvHelper.h  Surface.hpp  SwapChain.hpp  Tools.hpp  Utils.h  Window.hpp  globalDefs.hpp  globalIncludes.hpp  main.cpp
src/shaders/: compileShader.bat  compileShader.sh  shader.frag  shader.vert  shaderVolume.frag  shaderVolume.vert
src/textures/: example.pgm
(+3775 files in other folders)
